# rankops

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: settings.yml
.github/workflows/: ci.yml  publish-pypi.yml
crates/rankops-wasm/: Cargo.toml
crates/rankops-wasm/src/: lib.rs
examples/: README.md  diversity.rs  dp_topk_validation.rs  evaluate.rs  fusion.rs  hybrid_search.rs  pareto_rerank.rs  rerank_fde.rs  rerank_maxsim.rs  trec_eval.rs
rankops-python/: Cargo.toml  README.md  pyproject.toml  rankops.pyi
rankops-python/src/: lib.rs
rankops-python/tests/: test_fusion.py  test_rerank.py
src/: adapt.rs  diagnostics.rs  dp_topk.rs  lib.rs  metrics.rs  pipeline.rs  proptests.rs  trec.rs
src/rerank/: colbert.rs  diversity.rs  diversity_extended.rs  explain.rs  fde.rs  mod.rs  quantization.rs  scoring.rs  simd.rs
