[package]
name = "rankops-python"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
description = "Python bindings for rankops (Rust)."
repository = "https://github.com/arclabs561/rankops"
readme = "README.md"
publish = false

[lib]
name = "rankops"
crate-type = ["cdylib"]
doc = false

[dependencies]
rankops = { path = ".." }
pyo3 = "0.28"

[workspace]
resolver = "2"

