[package]
name = "rankops-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
description = "WASM bindings for rankops (fusion + reranking)"

[lib]
crate-type = ["cdylib"]

[dependencies]
rankops = { path = "../.." }
wasm-bindgen = "0.2.106"
js-sys = "0.3"

# Standalone workspace -- wasm-pack builds this separately from the parent
# `rankops` crate. Without this, Cargo treats the parent's `[workspace]` as
# implicitly including all sub-crates and CI fails with
# "current package believes it's in a workspace when it's not".
[workspace]

